--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
 }
+
+* {
+  scroll-behavior: smooth !important;
+}
+
+h1 {
+  font-weight: 500;
+}
+
+@media screen and (max-width: 425px) {
+  h1 {
+    font-size: 30px !important;
+  }
+}
